# kafka-chat

./: README.md  \  pyproject.toml
src/kafka_chat/: README.md  chatcon.py  chatpro.py  chatthread.py  cli.py  sample_pro.py
